[gd_scene load_steps=20 format=4 uid="uid://cn17c0albqdex"]

[ext_resource type="Texture2D" uid="uid://dud1j7e1fkkvm" path="res://Resource/bc_0.png" id="1_c08a4"]
[ext_resource type="Texture2D" uid="uid://tjeeqk4vog" path="res://Resource/bc_1.png" id="2_0exv0"]
[ext_resource type="PackedScene" uid="uid://78snji2qai06" path="res://terrain/brick/bricks.tscn" id="3_gij51"]
[ext_resource type="Script" uid="uid://dyx5t1qy6yapa" path="res://Map/map.gd" id="4_o6g8i"]
[ext_resource type="PackedScene" uid="uid://cdebyc8ihbt70" path="res://terrain/iron/irons.tscn" id="5_j6en4"]
[ext_resource type="PackedScene" uid="uid://bgax3k172xl" path="res://Tank/tank_main.tscn" id="6_0hp4m"]
[ext_resource type="PackedScene" uid="uid://lsrlof84hhbx" path="res://terrain/ice/ice.tscn" id="7_bl0mm"]
[ext_resource type="PackedScene" uid="uid://31pr3qrlrj5w" path="res://terrain/water/water.tscn" id="8_n1ca5"]
[ext_resource type="PackedScene" uid="uid://bpf8ca6ajpu34" path="res://terrain/kusa/kusa.tscn" id="9_s7qgb"]
[ext_resource type="Script" uid="uid://cxhvua5b7w7ou" path="res://Map/wall_area_2d.gd" id="10_3qkid"]
[ext_resource type="PackedScene" uid="uid://j2k8j6cbrd1e" path="res://Tank/base_area_2d.tscn" id="10_vunxh"]
[ext_resource type="AudioStream" uid="uid://bl3duvssvbbk8" path="res://sound/steelhit.ogg" id="11_1goxe"]
[ext_resource type="PackedScene" uid="uid://cqau4tw7jbyoc" path="res://MobTank/mob_tank_main.tscn" id="13_0k428"]
[ext_resource type="PackedScene" uid="uid://voggpv86u6dm" path="res://UI/UI.tscn" id="14_iyldn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r0ypu"]
texture = ExtResource("1_c08a4")
10:16/0 = 0
10:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rmq0h"]
texture = ExtResource("2_0exv0")
texture_region_size = Vector2i(8, 8)
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_lhf3d"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_r0ypu")
sources/1 = SubResource("TileSetAtlasSource_rmq0h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42tec"]
size = Vector2(64, 896)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pobmt"]
size = Vector2(832, 32)

[node name="Map" type="TileMapLayer"]
z_index = 2
tile_map_data = PackedByteArray("AAAAAAAAAAAKABAAAAAAAAEAAAAKABAAAAABAAAAAAAKABAAAAABAAEAAAAKABAAAAACAAAAAAAKABAAAAACAAEAAAAKABAAAAADAAAAAAAKABAAAAADAAEAAAAKABAAAAAEAAAAAAAKABAAAAAEAAEAAAAKABAAAAAFAAAAAAAKABAAAAAFAAEAAAAKABAAAAAGAAAAAAAKABAAAAAGAAEAAAAKABAAAAAHAAAAAAAKABAAAAAHAAEAAAAKABAAAAAIAAAAAAAKABAAAAAIAAEAAAAKABAAAAAJAAAAAAAKABAAAAAJAAEAAAAKABAAAAAKAAAAAAAKABAAAAAKAAEAAAAKABAAAAALAAAAAAAKABAAAAALAAEAAAAKABAAAAAMAAAAAAAKABAAAAAMAAEAAAAKABAAAAANAAAAAAAKABAAAAANAAEAAAAKABAAAAAOAAAAAAAKABAAAAAOAAEAAAAKABAAAAAPAAAAAAAKABAAAAAPAAEAAAAKABAAAAAQAAAAAAAKABAAAAAQAAEAAAAKABAAAAARAAAAAAAKABAAAAARAAEAAAAKABAAAAASAAAAAAAKABAAAAASAAEAAAAKABAAAAATAAAAAAAKABAAAAATAAEAAAAKABAAAAAUAAAAAAAKABAAAAAUAAEAAAAKABAAAAAVAAAAAAAKABAAAAAVAAEAAAAKABAAAAAWAAAAAAAKABAAAAAWAAEAAAAKABAAAAAXAAAAAAAKABAAAAAXAAEAAAAKABAAAAAYAAAAAAAKABAAAAAYAAEAAAAKABAAAAAZAAAAAAAKABAAAAAZAAEAAAAKABAAAAAaAAAAAAAKABAAAAAaAAEAAAAKABAAAAAbAAAAAAAKABAAAAAbAAEAAAAKABAAAAAcAAAAAAAKABAAAAAcAAEAAAAKABAAAAAdAAAAAAAKABAAAAAdAAEAAAAKABAAAAAeAAAAAAAKABAAAAAeAAEAAAAKABAAAAAfAAAAAAAKABAAAAAfAAEAAAAKABAAAAAgAAAAAAAKABAAAAAgAAEAAAAKABAAAAAhAAAAAAAKABAAAAAhAAEAAAAKABAAAAAiAAAAAAAKABAAAAAiAAEAAAAKABAAAAAjAAAAAAAKABAAAAAjAAEAAAAKABAAAAAkAAAAAAAKABAAAAAkAAEAAAAKABAAAAAlAAAAAAAKABAAAAAlAAEAAAAKABAAAAAmAAAAAAAKABAAAAAmAAEAAAAKABAAAAAnAAAAAAAKABAAAAAnAAEAAAAKABAAAAAoAAAAAAAKABAAAAAoAAEAAAAKABAAAAApAAAAAAAKABAAAAApAAEAAAAKABAAAAAqAAAAAAAKABAAAAAqAAEAAAAKABAAAAArAAAAAAAKABAAAAArAAEAAAAKABAAAAAsAAAAAAAKABAAAAAsAAEAAAAKABAAAAAtAAAAAAAKABAAAAAtAAEAAAAKABAAAAAuAAAAAAAKABAAAAAuAAEAAAAKABAAAAAvAAAAAAAKABAAAAAvAAEAAAAKABAAAAAwAAAAAAAKABAAAAAwAAEAAAAKABAAAAAxAAAAAAAKABAAAAAxAAEAAAAKABAAAAAyAAAAAAAKABAAAAAyAAEAAAAKABAAAAAzAAAAAAAKABAAAAAzAAEAAAAKABAAAAA0AAAAAAAKABAAAAA0AAEAAAAKABAAAAA1AAAAAAAKABAAAAA1AAEAAAAKABAAAAA2AAAAAAAKABAAAAA2AAEAAAAKABAAAAA3AAAAAAAKABAAAAA3AAEAAAAKABAAAAA4AAAAAAAKABAAAAA4AAEAAAAKABAAAAA5AAAAAAAKABAAAAA5AAEAAAAKABAAAAA6AAAAAAAKABAAAAA6AAEAAAAKABAAAAA7AAAAAAAKABAAAAA7AAEAAAAKABAAAAA8AAAAAAAKABAAAAA8AAEAAAAKABAAAAA9AAAAAAAKABAAAAA9AAEAAAAKABAAAAA+AAAAAAAKABAAAAA+AAEAAAAKABAAAAA/AAAAAAAKABAAAAA/AAEAAAAKABAAAAAAAAIAAAAKABAAAAAAAAMAAAAKABAAAAAAAAQAAAAKABAAAAAAAAUAAAAKABAAAAAAAAYAAAAKABAAAAAAAAcAAAAKABAAAAAAAAgAAAAKABAAAAAAAAkAAAAKABAAAAAAAAoAAAAKABAAAAAAAAsAAAAKABAAAAAAAAwAAAAKABAAAAAAAA0AAAAKABAAAAAAAA4AAAAKABAAAAAAAA8AAAAKABAAAAAAABAAAAAKABAAAAAAABEAAAAKABAAAAAAABIAAAAKABAAAAAAABMAAAAKABAAAAAAABQAAAAKABAAAAAAABUAAAAKABAAAAAAABYAAAAKABAAAAAAABcAAAAKABAAAAAAABgAAAAKABAAAAAAABkAAAAKABAAAAAAABoAAAAKABAAAAAAABsAAAAKABAAAAAAABwAAAAKABAAAAAAAB0AAAAKABAAAAAAAB4AAAAKABAAAAAAAB8AAAAKABAAAAAAACAAAAAKABAAAAAAACEAAAAKABAAAAAAACIAAAAKABAAAAAAACMAAAAKABAAAAAAACQAAAAKABAAAAAAACUAAAAKABAAAAAAACYAAAAKABAAAAAAACcAAAAKABAAAAAAACgAAAAKABAAAAAAACkAAAAKABAAAAAAACoAAAAKABAAAAAAACsAAAAKABAAAAAAACwAAAAKABAAAAAAAC0AAAAKABAAAAAAAC4AAAAKABAAAAAAAC8AAAAKABAAAAAAADAAAAAKABAAAAAAADEAAAAKABAAAAAAADIAAAAKABAAAAAAADMAAAAKABAAAAAAADQAAAAKABAAAAABAAIAAAAKABAAAAABAAMAAAAKABAAAAABAAQAAAAKABAAAAABAAUAAAAKABAAAAABAAYAAAAKABAAAAABAAcAAAAKABAAAAABAAgAAAAKABAAAAABAAkAAAAKABAAAAABAAoAAAAKABAAAAABAAsAAAAKABAAAAABAAwAAAAKABAAAAABAA0AAAAKABAAAAABAA4AAAAKABAAAAABAA8AAAAKABAAAAABABAAAAAKABAAAAABABEAAAAKABAAAAABABIAAAAKABAAAAABABMAAAAKABAAAAABABQAAAAKABAAAAABABUAAAAKABAAAAABABYAAAAKABAAAAABABcAAAAKABAAAAABABgAAAAKABAAAAABABkAAAAKABAAAAABABoAAAAKABAAAAABABsAAAAKABAAAAABABwAAAAKABAAAAABAB0AAAAKABAAAAABAB4AAAAKABAAAAABAB8AAAAKABAAAAABACAAAAAKABAAAAABACEAAAAKABAAAAABACIAAAAKABAAAAABACMAAAAKABAAAAABACQAAAAKABAAAAABACUAAAAKABAAAAABACYAAAAKABAAAAABACcAAAAKABAAAAABACgAAAAKABAAAAABACkAAAAKABAAAAABACoAAAAKABAAAAABACsAAAAKABAAAAABACwAAAAKABAAAAABAC0AAAAKABAAAAABAC4AAAAKABAAAAABAC8AAAAKABAAAAABADAAAAAKABAAAAABADEAAAAKABAAAAABADIAAAAKABAAAAABADMAAAAKABAAAAABADQAAAAKABAAAAACAAIAAAAKABAAAAACAAMAAAAKABAAAAACAAQAAAAKABAAAAACAAUAAAAKABAAAAACAAYAAAAKABAAAAACAAcAAAAKABAAAAACAAgAAAAKABAAAAACAAkAAAAKABAAAAACAAoAAAAKABAAAAACAAsAAAAKABAAAAACAAwAAAAKABAAAAACAA0AAAAKABAAAAACAA4AAAAKABAAAAACAA8AAAAKABAAAAACABAAAAAKABAAAAACABEAAAAKABAAAAACABIAAAAKABAAAAACABMAAAAKABAAAAACABQAAAAKABAAAAACABUAAAAKABAAAAACABYAAAAKABAAAAACABcAAAAKABAAAAACABgAAAAKABAAAAACABkAAAAKABAAAAACABoAAAAKABAAAAACABsAAAAKABAAAAACABwAAAAKABAAAAACAB0AAAAKABAAAAACAB4AAAAKABAAAAACAB8AAAAKABAAAAACACAAAAAKABAAAAACACEAAAAKABAAAAACACIAAAAKABAAAAACACMAAAAKABAAAAACACQAAAAKABAAAAACACUAAAAKABAAAAACACYAAAAKABAAAAACACcAAAAKABAAAAACACgAAAAKABAAAAACACkAAAAKABAAAAACACoAAAAKABAAAAACACsAAAAKABAAAAACACwAAAAKABAAAAACAC0AAAAKABAAAAACAC4AAAAKABAAAAACAC8AAAAKABAAAAACADAAAAAKABAAAAACADEAAAAKABAAAAACADIAAAAKABAAAAACADMAAAAKABAAAAACADQAAAAKABAAAAADAAIAAAAKABAAAAADAAMAAAAKABAAAAADAAQAAAAKABAAAAADAAUAAAAKABAAAAADAAYAAAAKABAAAAADAAcAAAAKABAAAAADAAgAAAAKABAAAAADAAkAAAAKABAAAAADAAoAAAAKABAAAAADAAsAAAAKABAAAAADAAwAAAAKABAAAAADAA0AAAAKABAAAAADAA4AAAAKABAAAAADAA8AAAAKABAAAAADABAAAAAKABAAAAADABEAAAAKABAAAAADABIAAAAKABAAAAADABMAAAAKABAAAAADABQAAAAKABAAAAADABUAAAAKABAAAAADABYAAAAKABAAAAADABcAAAAKABAAAAADABgAAAAKABAAAAADABkAAAAKABAAAAADABoAAAAKABAAAAADABsAAAAKABAAAAADABwAAAAKABAAAAADAB0AAAAKABAAAAADAB4AAAAKABAAAAADAB8AAAAKABAAAAADACAAAAAKABAAAAADACEAAAAKABAAAAADACIAAAAKABAAAAADACMAAAAKABAAAAADACQAAAAKABAAAAADACUAAAAKABAAAAADACYAAAAKABAAAAADACcAAAAKABAAAAADACgAAAAKABAAAAADACkAAAAKABAAAAADACoAAAAKABAAAAADACsAAAAKABAAAAADACwAAAAKABAAAAADAC0AAAAKABAAAAADAC4AAAAKABAAAAADAC8AAAAKABAAAAADADAAAAAKABAAAAADADEAAAAKABAAAAADADIAAAAKABAAAAADADMAAAAKABAAAAADADQAAAAKABAAAAAAADUAAAAKABAAAAAAADYAAAAKABAAAAAAADcAAAAKABAAAAABADUAAAAKABAAAAABADYAAAAKABAAAAABADcAAAAKABAAAAACADUAAAAKABAAAAACADYAAAAKABAAAAACADcAAAAKABAAAAADADUAAAAKABAAAAADADYAAAAKABAAAAADADcAAAAKABAAAAAEADYAAAAKABAAAAAEADcAAAAKABAAAAAFADYAAAAKABAAAAAFADcAAAAKABAAAAAGADYAAAAKABAAAAAGADcAAAAKABAAAAAHADYAAAAKABAAAAAHADcAAAAKABAAAAAIADYAAAAKABAAAAAIADcAAAAKABAAAAAJADYAAAAKABAAAAAJADcAAAAKABAAAAAKADYAAAAKABAAAAAKADcAAAAKABAAAAALADYAAAAKABAAAAALADcAAAAKABAAAAAMADYAAAAKABAAAAAMADcAAAAKABAAAAANADYAAAAKABAAAAANADcAAAAKABAAAAAOADYAAAAKABAAAAAOADcAAAAKABAAAAAPADYAAAAKABAAAAAPADcAAAAKABAAAAAQADYAAAAKABAAAAAQADcAAAAKABAAAAARADYAAAAKABAAAAARADcAAAAKABAAAAASADYAAAAKABAAAAASADcAAAAKABAAAAATADYAAAAKABAAAAATADcAAAAKABAAAAAUADYAAAAKABAAAAAUADcAAAAKABAAAAAVADYAAAAKABAAAAAVADcAAAAKABAAAAAWADYAAAAKABAAAAAWADcAAAAKABAAAAAXADYAAAAKABAAAAAXADcAAAAKABAAAAAYADYAAAAKABAAAAAYADcAAAAKABAAAAAZADYAAAAKABAAAAAZADcAAAAKABAAAAAaADYAAAAKABAAAAAaADcAAAAKABAAAAAbADYAAAAKABAAAAAbADcAAAAKABAAAAAcADYAAAAKABAAAAAcADcAAAAKABAAAAAdADYAAAAKABAAAAAdADcAAAAKABAAAAAeADYAAAAKABAAAAAeADcAAAAKABAAAAAfADYAAAAKABAAAAAfADcAAAAKABAAAAAgADYAAAAKABAAAAAgADcAAAAKABAAAAAhADYAAAAKABAAAAAhADcAAAAKABAAAAAiADYAAAAKABAAAAAiADcAAAAKABAAAAAjADYAAAAKABAAAAAjADcAAAAKABAAAAAkADYAAAAKABAAAAAkADcAAAAKABAAAAAlADYAAAAKABAAAAAlADcAAAAKABAAAAAmADYAAAAKABAAAAAmADcAAAAKABAAAAAnADYAAAAKABAAAAAnADcAAAAKABAAAAAoADYAAAAKABAAAAAoADcAAAAKABAAAAApADYAAAAKABAAAAApADcAAAAKABAAAAAqADYAAAAKABAAAAAqADcAAAAKABAAAAArADYAAAAKABAAAAArADcAAAAKABAAAAAsADYAAAAKABAAAAAsADcAAAAKABAAAAAtADYAAAAKABAAAAAtADcAAAAKABAAAAAuADYAAAAKABAAAAAuADcAAAAKABAAAAAvADYAAAAKABAAAAAvADcAAAAKABAAAAAwADYAAAAKABAAAAAwADcAAAAKABAAAAAxADYAAAAKABAAAAAxADcAAAAKABAAAAAyADYAAAAKABAAAAAyADcAAAAKABAAAAAzADYAAAAKABAAAAAzADcAAAAKABAAAAA0ADYAAAAKABAAAAA0ADcAAAAKABAAAAA1ADYAAAAKABAAAAA1ADcAAAAKABAAAAA2ADYAAAAKABAAAAA2ADcAAAAKABAAAAA3ADYAAAAKABAAAAA3ADcAAAAKABAAAAA4ADYAAAAKABAAAAA4ADcAAAAKABAAAAA5ADYAAAAKABAAAAA5ADcAAAAKABAAAAA6ADYAAAAKABAAAAA6ADcAAAAKABAAAAA7ADYAAAAKABAAAAA7ADcAAAAKABAAAAA8ADYAAAAKABAAAAA8ADcAAAAKABAAAAA9ADYAAAAKABAAAAA9ADcAAAAKABAAAAA+ADYAAAAKABAAAAA+ADcAAAAKABAAAAA/ADYAAAAKABAAAAA/ADcAAAAKABAAAAA4AAIAAAAKABAAAAA4AAMAAAAKABAAAAA4AAQAAAAKABAAAAA4AAUAAAAKABAAAAA4AAYAAAAKABAAAAA4AAcAAAAKABAAAAA4AAgAAAAKABAAAAA4AAkAAAAKABAAAAA4AAoAAAAKABAAAAA4AAsAAAAKABAAAAA4AAwAAAAKABAAAAA4AA0AAAAKABAAAAA4AA4AAAAKABAAAAA4AA8AAAAKABAAAAA4ABAAAAAKABAAAAA4ABEAAAAKABAAAAA4ABIAAAAKABAAAAA4ABMAAAAKABAAAAA4ABQAAAAKABAAAAA4ABUAAAAKABAAAAA4ABYAAAAKABAAAAA4ABcAAAAKABAAAAA4ABgAAAAKABAAAAA4ABkAAAAKABAAAAA4ABoAAAAKABAAAAA4ABsAAAAKABAAAAA4ABwAAAAKABAAAAA4AB0AAAAKABAAAAA4AB4AAAAKABAAAAA4AB8AAAAKABAAAAA4ACAAAAAKABAAAAA4ACEAAAAKABAAAAA4ACIAAAAKABAAAAA4ACMAAAAKABAAAAA4ACQAAAAKABAAAAA4ACUAAAAKABAAAAA4ACYAAAAKABAAAAA4ACcAAAAKABAAAAA4ACgAAAAKABAAAAA4ACkAAAAKABAAAAA4ACoAAAAKABAAAAA4ACsAAAAKABAAAAA4ACwAAAAKABAAAAA4AC0AAAAKABAAAAA4AC4AAAAKABAAAAA4AC8AAAAKABAAAAA4ADAAAAAKABAAAAA4ADEAAAAKABAAAAA5AAIAAAAKABAAAAA5AAMAAAAKABAAAAA5AAQAAAAKABAAAAA5AAUAAAAKABAAAAA5AAYAAAAKABAAAAA5AAcAAAAKABAAAAA5AAgAAAAKABAAAAA5AAkAAAAKABAAAAA5AAoAAAAKABAAAAA5AAsAAAAKABAAAAA5AAwAAAAKABAAAAA5AA0AAAAKABAAAAA5AA4AAAAKABAAAAA5AA8AAAAKABAAAAA5ABAAAAAKABAAAAA5ABEAAAAKABAAAAA5ABIAAAAKABAAAAA5ABMAAAAKABAAAAA5ABQAAAAKABAAAAA5ABUAAAAKABAAAAA5ABYAAAAKABAAAAA5ABcAAAAKABAAAAA5ABgAAAAKABAAAAA5ABkAAAAKABAAAAA5ABoAAAAKABAAAAA5ABsAAAAKABAAAAA5ABwAAAAKABAAAAA5AB0AAAAKABAAAAA5AB4AAAAKABAAAAA5AB8AAAAKABAAAAA5ACAAAAAKABAAAAA5ACEAAAAKABAAAAA5ACIAAAAKABAAAAA5ACMAAAAKABAAAAA5ACQAAAAKABAAAAA5ACUAAAAKABAAAAA5ACYAAAAKABAAAAA5ACcAAAAKABAAAAA5ACgAAAAKABAAAAA5ACkAAAAKABAAAAA5ACoAAAAKABAAAAA5ACsAAAAKABAAAAA5ACwAAAAKABAAAAA5AC0AAAAKABAAAAA5AC4AAAAKABAAAAA5AC8AAAAKABAAAAA5ADAAAAAKABAAAAA5ADEAAAAKABAAAAA6AAIAAAAKABAAAAA6AAMAAAAKABAAAAA6AAQAAAAKABAAAAA6AAUAAAAKABAAAAA6AAYAAAAKABAAAAA6AAcAAAAKABAAAAA6AAgAAAAKABAAAAA6AAkAAAAKABAAAAA6AAoAAAAKABAAAAA6AAsAAAAKABAAAAA6AAwAAAAKABAAAAA6AA0AAAAKABAAAAA6AA4AAAAKABAAAAA6AA8AAAAKABAAAAA6ABAAAAAKABAAAAA6ABEAAAAKABAAAAA6ABIAAAAKABAAAAA6ABMAAAAKABAAAAA6ABQAAAAKABAAAAA6ABUAAAAKABAAAAA6ABYAAAAKABAAAAA6ABcAAAAKABAAAAA6ABgAAAAKABAAAAA6ABkAAAAKABAAAAA6ABoAAAAKABAAAAA6ABsAAAAKABAAAAA6ABwAAAAKABAAAAA6AB0AAAAKABAAAAA6AB4AAAAKABAAAAA6AB8AAAAKABAAAAA6ACAAAAAKABAAAAA6ACEAAAAKABAAAAA6ACIAAAAKABAAAAA6ACMAAAAKABAAAAA6ACQAAAAKABAAAAA6ACUAAAAKABAAAAA6ACYAAAAKABAAAAA6ACcAAAAKABAAAAA6ACgAAAAKABAAAAA6ACkAAAAKABAAAAA6ACoAAAAKABAAAAA6ACsAAAAKABAAAAA6ACwAAAAKABAAAAA6AC0AAAAKABAAAAA6AC4AAAAKABAAAAA6AC8AAAAKABAAAAA6ADAAAAAKABAAAAA6ADEAAAAKABAAAAA7AAIAAAAKABAAAAA7AAMAAAAKABAAAAA7AAQAAAAKABAAAAA7AAUAAAAKABAAAAA7AAYAAAAKABAAAAA7AAcAAAAKABAAAAA7AAgAAAAKABAAAAA7AAkAAAAKABAAAAA7AAoAAAAKABAAAAA7AAsAAAAKABAAAAA7AAwAAAAKABAAAAA7AA0AAAAKABAAAAA7AA4AAAAKABAAAAA7AA8AAAAKABAAAAA7ABAAAAAKABAAAAA7ABEAAAAKABAAAAA7ABIAAAAKABAAAAA7ABMAAAAKABAAAAA7ABQAAAAKABAAAAA7ABUAAAAKABAAAAA7ABYAAAAKABAAAAA7ABcAAAAKABAAAAA7ABgAAAAKABAAAAA7ABkAAAAKABAAAAA7ABoAAAAKABAAAAA7ABsAAAAKABAAAAA7ABwAAAAKABAAAAA7AB0AAAAKABAAAAA7AB4AAAAKABAAAAA7AB8AAAAKABAAAAA7ACAAAAAKABAAAAA7ACEAAAAKABAAAAA7ACIAAAAKABAAAAA7ACMAAAAKABAAAAA7ACQAAAAKABAAAAA7ACUAAAAKABAAAAA7ACYAAAAKABAAAAA7ACcAAAAKABAAAAA7ACgAAAAKABAAAAA7ACkAAAAKABAAAAA7ACoAAAAKABAAAAA7ACsAAAAKABAAAAA7ACwAAAAKABAAAAA7AC0AAAAKABAAAAA7AC4AAAAKABAAAAA7AC8AAAAKABAAAAA7ADAAAAAKABAAAAA7ADEAAAAKABAAAAA8AAIAAAAKABAAAAA8AAMAAAAKABAAAAA8AAQAAAAKABAAAAA8AAUAAAAKABAAAAA8AAYAAAAKABAAAAA8AAcAAAAKABAAAAA8AAgAAAAKABAAAAA8AAkAAAAKABAAAAA8AAoAAAAKABAAAAA8AAsAAAAKABAAAAA8AAwAAAAKABAAAAA8AA0AAAAKABAAAAA8AA4AAAAKABAAAAA8AA8AAAAKABAAAAA8ABAAAAAKABAAAAA8ABEAAAAKABAAAAA8ABIAAAAKABAAAAA8ABMAAAAKABAAAAA8ABQAAAAKABAAAAA8ABUAAAAKABAAAAA8ABYAAAAKABAAAAA8ABcAAAAKABAAAAA8ABgAAAAKABAAAAA8ABkAAAAKABAAAAA8ABoAAAAKABAAAAA8ABsAAAAKABAAAAA8ABwAAAAKABAAAAA8AB0AAAAKABAAAAA8AB4AAAAKABAAAAA8AB8AAAAKABAAAAA8ACAAAAAKABAAAAA8ACEAAAAKABAAAAA8ACIAAAAKABAAAAA8ACMAAAAKABAAAAA8ACQAAAAKABAAAAA8ACUAAAAKABAAAAA8ACYAAAAKABAAAAA8ACcAAAAKABAAAAA8ACgAAAAKABAAAAA8ACkAAAAKABAAAAA8ACoAAAAKABAAAAA8ACsAAAAKABAAAAA8ACwAAAAKABAAAAA8AC0AAAAKABAAAAA8AC4AAAAKABAAAAA8AC8AAAAKABAAAAA8ADAAAAAKABAAAAA8ADEAAAAKABAAAAA9AAIAAAAKABAAAAA9AAMAAAAKABAAAAA9AAQAAAAKABAAAAA9AAUAAAAKABAAAAA9AAYAAAAKABAAAAA9AAcAAAAKABAAAAA9AAgAAAAKABAAAAA9AAkAAAAKABAAAAA9AAoAAAAKABAAAAA9AAsAAAAKABAAAAA9AAwAAAAKABAAAAA9AA0AAAAKABAAAAA9AA4AAAAKABAAAAA9AA8AAAAKABAAAAA9ABAAAAAKABAAAAA9ABEAAAAKABAAAAA9ABIAAAAKABAAAAA9ABMAAAAKABAAAAA9ABQAAAAKABAAAAA9ABUAAAAKABAAAAA9ABYAAAAKABAAAAA9ABcAAAAKABAAAAA9ABgAAAAKABAAAAA9ABkAAAAKABAAAAA9ABoAAAAKABAAAAA9ABsAAAAKABAAAAA9ABwAAAAKABAAAAA9AB0AAAAKABAAAAA9AB4AAAAKABAAAAA9AB8AAAAKABAAAAA9ACAAAAAKABAAAAA9ACEAAAAKABAAAAA9ACIAAAAKABAAAAA9ACMAAAAKABAAAAA9ACQAAAAKABAAAAA9ACUAAAAKABAAAAA9ACYAAAAKABAAAAA9ACcAAAAKABAAAAA9ACgAAAAKABAAAAA9ACkAAAAKABAAAAA9ACoAAAAKABAAAAA9ACsAAAAKABAAAAA9ACwAAAAKABAAAAA9AC0AAAAKABAAAAA9AC4AAAAKABAAAAA9AC8AAAAKABAAAAA9ADAAAAAKABAAAAA9ADEAAAAKABAAAAA+AAIAAAAKABAAAAA+AAMAAAAKABAAAAA+AAQAAAAKABAAAAA+AAUAAAAKABAAAAA+AAYAAAAKABAAAAA+AAcAAAAKABAAAAA+AAgAAAAKABAAAAA+AAkAAAAKABAAAAA+AAoAAAAKABAAAAA+AAsAAAAKABAAAAA+AAwAAAAKABAAAAA+AA0AAAAKABAAAAA+AA4AAAAKABAAAAA+AA8AAAAKABAAAAA+ABAAAAAKABAAAAA+ABEAAAAKABAAAAA+ABIAAAAKABAAAAA+ABMAAAAKABAAAAA+ABQAAAAKABAAAAA+ABUAAAAKABAAAAA+ABYAAAAKABAAAAA+ABcAAAAKABAAAAA+ABgAAAAKABAAAAA+ABkAAAAKABAAAAA+ABoAAAAKABAAAAA+ABsAAAAKABAAAAA+ABwAAAAKABAAAAA+AB0AAAAKABAAAAA+AB4AAAAKABAAAAA+AB8AAAAKABAAAAA+ACAAAAAKABAAAAA+ACEAAAAKABAAAAA+ACIAAAAKABAAAAA+ACMAAAAKABAAAAA+ACQAAAAKABAAAAA+ACUAAAAKABAAAAA+ACYAAAAKABAAAAA+ACcAAAAKABAAAAA+ACgAAAAKABAAAAA+ACkAAAAKABAAAAA+ACoAAAAKABAAAAA+ACsAAAAKABAAAAA+ACwAAAAKABAAAAA+AC0AAAAKABAAAAA+AC4AAAAKABAAAAA+AC8AAAAKABAAAAA+ADAAAAAKABAAAAA+ADEAAAAKABAAAAA/AAIAAAAKABAAAAA/AAMAAAAKABAAAAA/AAQAAAAKABAAAAA/AAUAAAAKABAAAAA/AAYAAAAKABAAAAA/AAcAAAAKABAAAAA/AAgAAAAKABAAAAA/AAkAAAAKABAAAAA/AAoAAAAKABAAAAA/AAsAAAAKABAAAAA/AAwAAAAKABAAAAA/AA0AAAAKABAAAAA/AA4AAAAKABAAAAA/AA8AAAAKABAAAAA/ABAAAAAKABAAAAA/ABEAAAAKABAAAAA/ABIAAAAKABAAAAA/ABMAAAAKABAAAAA/ABQAAAAKABAAAAA/ABUAAAAKABAAAAA/ABYAAAAKABAAAAA/ABcAAAAKABAAAAA/ABgAAAAKABAAAAA/ABkAAAAKABAAAAA/ABoAAAAKABAAAAA/ABsAAAAKABAAAAA/ABwAAAAKABAAAAA/AB0AAAAKABAAAAA/AB4AAAAKABAAAAA/AB8AAAAKABAAAAA/ACAAAAAKABAAAAA/ACEAAAAKABAAAAA/ACIAAAAKABAAAAA/ACMAAAAKABAAAAA/ACQAAAAKABAAAAA/ACUAAAAKABAAAAA/ACYAAAAKABAAAAA/ACcAAAAKABAAAAA/ACgAAAAKABAAAAA/ACkAAAAKABAAAAA/ACoAAAAKABAAAAA/ACsAAAAKABAAAAA/ACwAAAAKABAAAAA/AC0AAAAKABAAAAA/AC4AAAAKABAAAAA/AC8AAAAKABAAAAA/ADAAAAAKABAAAAA/ADEAAAAKABAAAAA4ADIAAAAKABAAAAA4ADMAAAAKABAAAAA4ADQAAAAKABAAAAA4ADUAAAAKABAAAAA5ADIAAAAKABAAAAA5ADMAAAAKABAAAAA5ADQAAAAKABAAAAA5ADUAAAAKABAAAAA6ADIAAAAKABAAAAA6ADMAAAAKABAAAAA6ADQAAAAKABAAAAA6ADUAAAAKABAAAAA7ADIAAAAKABAAAAA7ADMAAAAKABAAAAA7ADQAAAAKABAAAAA7ADUAAAAKABAAAAA8ADIAAAAKABAAAAA8ADMAAAAKABAAAAA8ADQAAAAKABAAAAA8ADUAAAAKABAAAAA9ADIAAAAKABAAAAA9ADMAAAAKABAAAAA9ADQAAAAKABAAAAA9ADUAAAAKABAAAAA+ADIAAAAKABAAAAA+ADMAAAAKABAAAAA+ADQAAAAKABAAAAA+ADUAAAAKABAAAAA/ADIAAAAKABAAAAA/ADMAAAAKABAAAAA/ADQAAAAKABAAAAA/ADUAAAAKABAAAAA=")
tile_set = SubResource("TileSet_lhf3d")
script = ExtResource("4_o6g8i")
brick = ExtResource("3_gij51")
iron = ExtResource("5_j6en4")
water = ExtResource("8_n1ca5")
kusa = ExtResource("9_s7qgb")
ice = ExtResource("7_bl0mm")
TankMain = ExtResource("6_0hp4m")
MobTankMain = ExtResource("13_0k428")
UI = ExtResource("14_iyldn")

[node name="WallArea2D" type="Area2D" parent="."]
script = ExtResource("10_3qkid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallArea2D"]
position = Vector2(32, 448)
shape = SubResource("RectangleShape2D_42tec")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallArea2D"]
position = Vector2(928, 448)
shape = SubResource("RectangleShape2D_42tec")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WallArea2D"]
position = Vector2(480, 16)
shape = SubResource("RectangleShape2D_pobmt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WallArea2D"]
position = Vector2(480, 880)
shape = SubResource("RectangleShape2D_pobmt")

[node name="AudioSteelhit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_1goxe")
volume_db = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="shovelPropTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="shovelPropTimeOver" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IronBrickTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Base" parent="." instance=ExtResource("10_vunxh")]
position = Vector2(480, 832)

[connection signal="area_entered" from="WallArea2D" to="." method="_on_wall_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="shovelPropTimer" to="." method="_on_shovel_prop_timer_timeout"]
[connection signal="timeout" from="shovelPropTimeOver" to="." method="_on_shovel_prop_time_over_timeout"]
[connection signal="timeout" from="IronBrickTimer" to="." method="_on_iron_brick_timer_timeout"]
